[package]
name = "bencher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "^0.16.4"
tokio = {version="1.1",features=["process"]}
clap = { version = "4.5.7", features = ["derive"] }
image = "0.24.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
rust-s3 = "0.34.0"
lazy_static = "1.4.0"
reqwest = { version="0.12.5", features = ["json"]}
async-trait = "0.1.74"
enum_dispatch = "0.3.13"
serde_yaml = "0.9"